--- a/static/style.css
+++ b/static/style.css
@@ -25,6 +25,7 @@ header h1 {
 }
 
 section {
+  flex: 1;
   width: 100%;
   height: 100%;
   background-color: #ddd;
@@ -82,6 +83,21 @@ div#editor {
   box-shadow: 3px 3px 3px 1px rgba(0, 0, 0, 0.1) inset;
   background-color: white;
   display: block;
+}
+
+td.check span {
+  display: block;
+  width: 24px;
+  height: 24px;
+  background-size: cover;
+  border: none;
+  margin: 0 auto;
+}
+td.check[data-checked="true"] span {
+  background-image: url("/static/checked.png");
+}
+td.check[data-checked="false"] span {
+  background-image: url("/static/square.png");
 }
 
 #eval-loader {
