--- a/static/style.css
+++ b/static/style.css
@@ -67,7 +67,7 @@ div.block {
 }
 
 div.block#desc-area {
-  min-height: 20vh;
+  /*min-height: 20vh;*/
 }
 div.block#edit-area {
   min-height: 30vh;
@@ -114,6 +114,39 @@ td.check[data-checked="false"] span {
   text-align: center;
 }
 
+.modal {
+  position: absolute;
+  z-index: -1;
+  opacity: 0;
+  transition: all .3s;
+}
+
+.modal.show {
+  z-index: 100;
+  opacity: 1;
+}
+
+.modal-bg {
+  display: table-cell;
+  z-index: 101;
+  vertical-align: middle;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+.modal-window {
+  display: block;
+  z-index: 102;
+  background-color: #eee;
+  margin: 0 auto;
+  text-align: center;
+  width: 70%;
+  height: 100px;
+  border-radius: 48px;
+  border: 4px solid rgba(100, 100, 100, 0.5);
+  padding-top: 40px;
+}
 
 .loader {
   z-index: 100;
