--- a/static/style.css
+++ b/static/style.css
@@ -142,6 +142,7 @@ td.check[data-checked="false"] span {
   margin: 0 auto;
   text-align: center;
   width: 70%;
+  max-width: 824px;
   height: 100px;
   border-radius: 48px;
   border: 4px solid rgba(100, 100, 100, 0.5);
