--- a/templates/exercise.html
+++ b/templates/exercise.html
@@ -54,13 +54,13 @@
           <style>.CodeMirror-scroll{min-height: 150px;}</style>
           <textarea id="editor"></textarea>
         </div>
-        <div class="container has-text-centered">
+        <div style="text-align:center;">
           <button id="eval-button" class="button is-primary is-outlined is-medium" onclick="onclickEvalButton();" style="margin-bottom: 1em;">Check</button>
         </div>
         <div id="result-area" class="box">
           <div id="result" class="content"></div>
         </div>
-        <div class="container has-text-centered">
+        <div style="text-align:center;">
           <a href="/">&lt;&lt; 問題一覧へ戻る</a>
         </div>
       </div>
