Fit page height

--- a/templates/default.html
+++ b/templates/default.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="/static/bulma.css">
   {% block head %}{% endblock %}
 </head>
-<body>
+<body style="display: flex; flex-direction: column; min-height: 100vh;">
   <section class="hero is-dark">
     <div class="hero-body">
       <div class="container has-text-centered">
