--- a/templates/index.html
+++ b/templates/index.html
@@ -5,10 +5,9 @@
   <link rel="stylesheet" href="/static/bulma.css">
   <script src="/static/Storage.js"></script>
   <script>
-    window.onpageshow = () => {
+    function updateCheckRow() {
       let checkElements = document.getElementsByClassName("check");
       for (let checkElement of checkElements) {
-        console.log(checkElement);
         let check = ExerciseStorage.getCheck(checkElement.dataset.checkId);
         if (check) {
           checkElement.dataset.checked = "true";
@@ -17,10 +16,51 @@
         }
       }
     }
+    window.onpageshow = () => {
+      let restoreModal = document.getElementById("restore-modal");
+      let restoreButton = document.getElementById("restore-button");
+      let restoreProgress = document.getElementById("restore-progress");
+      restoreButton.onchange = (e) => {
+        let file = e.target.files;
+        if (file.length > 0) {
+          restoreModal.classList.add("is-active");
+          ExerciseStorage.restore(file[0], restoreProgress, () => {
+            updateCheckRow();
+            restoreModal.classList.remove("is-active");
+          });
+        }
+      }
+      updateCheckRow();
+    }
   </script>
 {% endblock %}
 {% block content %}
-  <section class="section">
+  <div id="restore-modal" class="modal">
+    <div class="modal-background"></div>
+    <div class="modal-content">
+      <progress id="restore-progress" class="progress is-primary" value="0" max="100">0%</progress>
+    </div>
+  </div>
+  <section class="section" style="flex: 1;">
+    <div class="container" style="text-align:right;">
+      <a class="button is-primary" href="#" onclick="ExerciseStorage.download();">
+        <span class="icon">
+          <i class="fa fa-download"></i>
+        </span>
+        <span>Save</span>
+      </a>
+      <label class="file-label is-inline">
+        <input id="restore-button" class="file-input" type="file" name="save">
+        <span class="file-cta">
+          <span class="file-icon">
+            <i class="fa fa-upload"></i>
+          </span>
+          <span class="file-label">
+            Restore
+          </span>
+        </span>
+      </label>
+    </div>
     <div class="container">
     <style>
       .clickable { cursor: pointer; }
