--- a/templates/exercise.html
+++ b/templates/exercise.html
@@ -41,7 +41,7 @@
     </div>
     <button class="modal-close is-large" aria-label="close"></button>
   </div>
-  <section class="section">
+  <section class="section" style="flex: 1;">
     <div class="columns is-centered">
       <div class="column is-8">
         <div id="desc-area" class="box">
