--- a/templates/exercise.html
+++ b/templates/exercise.html
@@ -11,6 +11,7 @@
   <script>
     const QUESTION_PATH = "{{ question.path }}";
     const QUESTION = {
+      media: "{{ question.data.media | safe }}" || null,
       prepare: "{{ question.data.prepare | safe }}" || "",
       test: {% if question.data.test %} "{{ question.data.test | safe }}" {% else %} null {% endif %},
       expect: {% if question.data.expect %} "{{ question.data.expect | safe }}" {% else %} null {% endif %},
@@ -45,6 +46,12 @@
     <div class="columns is-centered">
       <div class="column is-8">
         <div id="desc-area" class="box">
+          <style>
+            #media-area{position:relative;width:100%;padding-top:56.25%;}
+            #media-area .media{position:absolute;top:0;right:0;width:100% !important;height:100% !important;}
+          </style>
+          <div id="title" class="content"></div>
+          <div id="media-area"></div>
           <div id="description" class="content"></div>
         </div>
         <div id="quest-area" class="box">
