Support embedding SlideShare as a media

--- a/templates/exercise.html
+++ b/templates/exercise.html
@@ -43,7 +43,9 @@
     <button class="modal-close is-large" aria-label="close"></button>
   </div>
   <style>
-    #media-area{position:relative;padding-top:56.25%;margin-bottom:24px;}
+    #media-area{position:relative;margin-bottom:24px;}
+    #media-area.youtube{padding-top:56.25%;}
+    #media-area.slideshare{padding-top:56.25%;}
     #media-area .media{position:absolute;top:0;right:0;width:100% !important;height:100% !important;}
   </style>
   <section class="section" style="flex: 1;">
