--- a/templates/default.html
+++ b/templates/default.html
@@ -13,7 +13,7 @@
     <div class="hero-body">
       <div class="container has-text-centered">
         <h1 class="title">
-          Lisp Tutor
+          cl-exercise
         </h1>
       </div>
     </div>
@@ -23,7 +23,7 @@
     <div class="container">
       <div class="content has-text-centered">
         <p>
-          <strong>Lisp Tutor</strong> by <a href="https://github.com/tamamu">Eddie</a>. The source code is licensed
+          <strong>cl-exercise</strong> by <a href="https://github.com/tamamu">Eddie</a> and <a href="https://github.com/t-cool">t-cool</a>. The source code is licensed
           <a href="http://opensource.org/licenses/mit-license.php">MIT</a>.
         </p>
         <p>
