--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,5 @@
 {% extends "default.html" %}
-{% block title %}Lisp Tutor{% endblock %}
+{% block title %}cl-exercise{% endblock %}
 {% block head %}
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="/static/bulma.css">
