--- a/templates/index.html
+++ b/templates/index.html
@@ -79,7 +79,7 @@
             <tr>
               <th class="is-narrow"><abbr title="Number">No.</abbr></th>
               <th class="is-narrow">Check</th>
-              <th>目標</th>
+              <th>Contents</th>
             </tr>
           </thead>
           <colgroup span="2"></colgroup>
