--- a/templates/exercise.html
+++ b/templates/exercise.html
@@ -33,10 +33,10 @@
     <div class="modal-content">
       <article class="message is-success is-large">
         <div class="message-header">
-          <p>正解</p>
+          <p>Correct!!</p>
         </div>
         <div class="message-body has-text-centered">
-          <a href="/">&lt;&lt;問題一覧へ戻る</a>
+          <a href="/">&lt;&lt;Back to Main page</a>
         </div>
       </article>
     </div>
@@ -70,7 +70,7 @@
           <div id="result" class="content"></div>
         </div>
         <div style="text-align:center;">
-          <a href="/">&lt;&lt; 問題一覧へ戻る</a>
+          <a href="/">&lt;&lt; Back to Main page」</a>
         </div>
       </div>
     </div>
